src/objects/INT_Comentarios__c.object
<CustomObject>
    <description>Contiene información de los comentarios del caso asociados a los movimientos que se envían a las aseguradoras</description>
    <fields>
        <fullName>ICC_LKP_Movimiento_CIA__c</fullName>
        <description>Movimiento que se envía a la aseguradora asociado a los comentarios</description>
        <label>Integraciones: Movimiento CIA</label>
        <referenceTo>INT_Movimiento_CIA__c</referenceTo>
        <relationshipLabel>Integraciones: Comentarios</relationshipLabel>
        <relationshipName>Integraciones_Comentarios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ICC_TXT_Comentario_Rechazo__c</fullName>
        <description>Comentario de Rechazo del siniestro que se envía a la aseguradora</description>
        <label>Comentario Rechazo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICC_TXT_Comentario_Sin_Indem__c</fullName>
        <description>Comentario del Siniestro Indemnizable que se envía a la aseguradora</description>
        <label>Comentario Siniestro Indemnizable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICC_TXT_Comentario_Sin_Rep__c</fullName>
        <description>Comentario del Siniestro Reparable que se envía a la aseguradora</description>
        <label>Comentario Siniestro Reparable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICC_TXT_Comentario__c</fullName>
        <label>Comentario</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integraciones: Comentarios</label>
    <nameField>
        <label>Nombre de Integraciones: Comentarios</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integraciones: Comentarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>